Fix distorted images on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,6 +146,7 @@ a:hover {
 
 main img {
     max-width: 100%;
+    height: auto;
     margin-top: 0.2rem;
 }
 
